fix: Ensure defensive copying of collections in ModelDescription and ModelDiscoveryFilter
Fixed test failures where Set.copyOf() and Map.copyOf() were returning the same
instance when given already-unmodifiable collections.

Changed from Set.copyOf() to Collections.unmodifiableSet(new HashSet<>()) to
guarantee a new defensive copy is always created, ensuring:
- ModelDescription.capabilities, supportedLanguages, and additionalMetadata
- ModelDiscoveryFilter.types and requiredCapabilities

This ensures proper encapsulation and prevents external modifications to internal
collection state, which is what the tests were validating.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>